<resources>
    <string name="app_name">storemanagement</string>
    <string name="save_button_text">저장</string>

    <string name="home_off_member_title">이 시간에 일이 없는 사람</string>
    <string name="home_schedule_title">시간표</string>

    <string name="todo_write">할 일을 입력하세요</string>

    <string name="schedule_top_appbar_title">일정 추가 / 수정</string>
    <string name="schedule_add_card_text">Add Schedule</string>
    <string name="schedule_schedule_card_start_text">시작</string>
    <string name="schedule_schedule_card_end_text">종료</string>
    <string name="schedule_time_picker_am">오전</string>
    <string name="schedule_time_picker_pm">오후</string>
    <string name="schedule_time_picker_cancel_button">취소</string>
    <string name="schedule_time_picker_add_button">확인</string>

    <string name="set_calender_top_appbar_title">시간표 설정</string>
    <string name="set_calender_name_sub_title">시간표 이름</string>
    <string name="set_calender_name_hint">시간표 이름을 입력해주세요.</string>
    <string name="set_calender_fixed_schedule_sub_title">고정 시간</string>
    <string name="calculate_salary">급여 계산</string>
    <string name="set_salary">급여 설정</string>
    <string name="set_year">년도 설정</string>
    <string name="year">년</string>
    <string name="set_month">월 설정</string>
    <string name="month">월</string>
    <string name="salary_day">급여일</string>
    <string name="hour_salary">시급</string>
    <string name="won">원</string>
    <string name="salary">급여</string>
    <string name="holiday_salary">주휴수당</string>

</resources>